增加卡片样式

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -29,7 +29,7 @@ body
   height $navbarHeight
   background-color #fff
   box-sizing border-box
-  border-bottom 1px solid $borderColor
+  box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28)
 
 .sidebar-mask
   position fixed
@@ -39,6 +39,7 @@ body
   width 100vw
   height 100vh
   display none
+  background-color: rgba(0, 0, 0, .7)
 
 .sidebar
   font-size 15px
