--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -39,7 +39,9 @@ body
   width 100vw
   height 100vh
   display none
-  background-color: rgba(0, 0, 0, .7)
+  background-color $accentColor
+  opacity .85
+  // background-color: rgba(0, 0, 0, .7)
 
 .sidebar
   font-size 15px
@@ -168,6 +170,15 @@ th, td
   padding-top $navbarHeight
 
 .theme-container
+  .CanvasNest
+    position: fixed
+    z-index -1
+    left: 0
+    right 0
+    top: 0
+    bottom: 0
+    width: 100vw
+    height 100vh
   &.sidebar-open
     .sidebar-mask
       display: block
@@ -187,5 +198,9 @@ th, td
       display none
     .page
       padding-left 0
+
+@media (max-width: $MQMobile)
+  .CanvasNest
+      display: none
 
 @require './mobile.styl'
