分页优化，手机端适配优化，标题过长优化，标签页初始化优化

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -58,7 +58,9 @@ body
   overflow-y auto
 
 .content:not(.custom)
-  @extend $wrapper
+  padding: 2rem 2rem 0;
+  max-width: 960px;
+  margin: 0px auto;
   > *:first-child
     margin-top $navbarHeight
   a:hover
