--- a/styles/config.styl
+++ b/styles/config.styl
@@ -8,7 +8,7 @@ $arrowBgColor = #ccc
 // layout
 $navbarHeight = 3.6rem
 $sidebarWidth = 20rem
-$contentWidth = 740px
+$contentWidth = 50%
 
 // responsive breakpoints
 $MQNarrow = 959px
