--- a/styles/config.styl
+++ b/styles/config.styl
@@ -4,9 +4,10 @@ $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
+$bgColor = #fff
 
 // layout
-$navbarHeight = 3.6rem
+$navbarHeight = 3.4rem
 $sidebarWidth = 20rem
 $contentWidth = 740px
 
