1. 恢复侧边栏分组的title 2. 去掉页面第一个元素的margin-top

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -56,8 +56,8 @@ body
 
 .content:not(.custom)
   @extend $wrapper
-  > *:first-child
-    margin-top $navbarHeight
+  // > *:first-child
+  //   margin-top 1.6rem
   a:hover
     text-decoration underline
   p.demo
