1. 恢复侧边栏分组的title 2. 去掉页面第一个元素的margin-top

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -65,8 +65,8 @@ input
 
 .content:not(.custom)
   @extend $wrapper
-  > *:first-child
-    margin-top 1rem
+  // > *:first-child
+  //   margin-top 1.6rem
   a:hover
     text-decoration underline
   p.demo
