--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -1,3 +1,4 @@
+@require './recoConfig'
 @require './code'
 @require './custom-blocks'
 @require './arrow'
@@ -112,7 +113,7 @@ h1, h2, h3, h4, h5, h6
     padding-top ($navbarHeight + 1rem)
     margin-bottom 0
     &:first-child
-      margin-top -1.5rem
+      margin-top -6.5rem
       margin-bottom 1rem
       + p, + pre, + .custom-block
         margin-top 2rem
