1.样式优化2.修改默认颜色

--- a/styles/config.styl
+++ b/styles/config.styl
@@ -1,6 +1,6 @@
 // colors
-$accentColor = #fb9b5f
-$textColor = #2c3e50
+$accentColor = #424242
+$textColor = #232321
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
