--- a/styles/custom-blocks.styl
+++ b/styles/custom-blocks.styl
@@ -10,11 +10,11 @@
   &.tip
     background-color #f3f5f7
     border-color #67cc86
-    color darken(#67cc86, 70%)
+    // color darken(#67cc86, 70%)
   &.warning
     background-color #fbf0ea
     border-color #fb9b5f
-    color darken(#ffe564, 70%)
+    // color darken(#ffe564, 70%)
     .custom-block-title
       color darken(#ffe564, 50%)
     a
@@ -22,7 +22,7 @@
   &.danger
     background-color #fceaea
     border-color #f26d6d
-    color darken(red, 70%)
+    // color darken(red, 70%)
     .custom-block-title
       color darken(red, 40%)
     a
