添加主题色筛选功能

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -4,19 +4,19 @@
 @require './arrow'
 @require './wrapper'
 @require './toc'
+@require './colorMode/index'
 @require '../fonts/iconfont.css'
 
 html, body
   padding 0
   margin 0
-  background-color #fff
-
 body
   font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   font-size 16px
   color $textColor
+  background-color #fff
 
 .page
   padding-left $sidebarWidth
