优化流程图的滚动条

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -213,3 +213,6 @@ th, td
   background-color: rgba(125, 125, 125, 0.7);
   -webkit-border-radius: 6px;    
 
+/************** 流程图的滚动条 **************/
+.vuepress-flowchart
+  overflow: auto  
