1.优化样式2.优化首页页脚

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -93,7 +93,7 @@ kbd
 blockquote
   font-size .9rem
   color #999
-  border-left .25rem solid #dfe2e5
+  border-left .25rem solid $accentColor
   margin 0.5rem 0
   padding .25rem 0 .25rem 1rem
   & > p
@@ -216,3 +216,4 @@ th, td
 /************** 流程图的滚动条 **************/
 .vuepress-flowchart
   overflow: auto  
+
