修复 官方解析markdown修改了className导致的内容样式问题

--- a/styles/mobile.styl
+++ b/styles/mobile.styl
@@ -35,7 +35,7 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
 @media (max-width: $MQMobileNarrow)
   h1
     font-size 1.9rem
-  .content
+  .content__default
     div[class*="language-"]
       margin 0.85rem -1.5rem
       border-radius 0
