--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -55,7 +55,7 @@ body
   border-right 1px solid $borderColor
   overflow-y auto
 
-.content:not(.custom)
+.content__default:not(.custom)
   @extend $wrapper
   // > *:first-child
   //   margin-top 1.6rem
@@ -68,7 +68,7 @@ body
   img
     max-width 100%
 
-.content.custom
+.content__default.custom
   padding 0
   margin 0
   img
@@ -108,7 +108,7 @@ strong
 h1, h2, h3, h4, h5, h6
   font-weight 500
   line-height 1.25
-  .content:not(.custom) > &
+  .content__default:not(.custom) > &
     margin-top (0.5rem - $navbarHeight)
     padding-top ($navbarHeight + 1rem)
     margin-bottom 0
@@ -171,7 +171,7 @@ th, td
     .sidebar-mask
       display: block
   &.no-navbar
-    .content:not(.custom) > h1, h2, h3, h4, h5, h6
+    .content__default:not(.custom) > h1, h2, h3, h4, h5, h6
         margin-top 1.5rem
         padding-top 0
     .sidebar
