--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -55,7 +55,7 @@ body
   border-right 1px solid $borderColor
   overflow-y auto
 
-.content__default:not(.custom)
+.content:not(.custom)
   @extend $wrapper
   // > *:first-child
   //   margin-top 1.6rem
@@ -68,7 +68,7 @@ body
   img
     max-width 100%
 
-.content__default.custom
+.content.custom
   padding 0
   margin 0
   img
