--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -6,12 +6,16 @@
 @require './toc'
 @require './colorMode/index'
 @require '../fonts/iconfont.css'
+@font-face {
+  font-family: Ubuntu;
+  src: url('https://fonts.font.im/css?family=Ubuntu');
+}
 
 html, body
   padding 0
   margin 0
 body
-  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
+  font-family Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   font-size 16px
