--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -5,7 +5,7 @@
 @require './wrapper'
 @require './toc'
 @require './colorMode/index'
-@require '../fonts/iconfont.css'
+@require './iconfont.css'
 @font-face {
   font-family: Ubuntu;
   src: url('https://fonts.font.im/css?family=Ubuntu');
@@ -15,7 +15,7 @@ html, body
   padding 0
   margin 0
 body
-  font-family Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
+  font-family Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   font-size 16px
@@ -192,7 +192,7 @@ th, td
 
 .iconfont
   font-size: 0.9rem;
-  color: #999;
+  color: #888;
   // &:not(:first-child)
   //   margin-left: 1rem
   // span
