feat : make kanbanniang color follow theme color
1. kanbanniang button color
2. kanbanniang button color when mouse hover

--- a/styles/colorMixin.styl
+++ b/styles/colorMixin.styl
@@ -83,9 +83,14 @@ color-mode(accountColor , colorName)
         button
           border 1px solid accountColor!important
           color accountColor!important;
+    .showBanNiang
+      background-color lighten(accountColor, 50%)!important
     .banniang-container
       .messageBox
         background-color lighten(accountColor, 50%)!important
+      .operation
+        i:hover
+          color lighten(accountColor, 50%)!important
 
     @media (min-width: 765px)
       .nav-item > a:not(.external):hover,
