--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6
     padding-top ($navbarHeight + 1rem)
     margin-bottom 0
     &:first-child
-      margin-top -1.5rem
+      margin-top -3.5rem
       margin-bottom 1rem
       + p, + pre, + .custom-block
         margin-top 2rem
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5, h6
     opacity: 1
 
 h1
-  font-size 2.2rem
+  font-size 1.95rem
 
 h2
   font-size 1.65rem
@@ -211,11 +211,11 @@ th, td
 ::-webkit-scrollbar-thumb:horizontal
   width: 5px;
   background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;    
+  -webkit-border-radius: 6px;
 
 /************** 流程图的滚动条 **************/
 .vuepress-flowchart
-  overflow: auto  
+  overflow: auto
 
 /************** 腾讯 404 公益 **************/
 
@@ -228,11 +228,59 @@ th, td
     padding: 6px 20px!important
     text-decoration: none!important
     border-radius: 4px
-  }  
+  }
 }
 
 @media screen and (max-width: 720px) {
   .mod_404 .desc {
     margin: 50px 0
-  }  
+  }
 }
+
+/************** 评论功能 **************/
+
+.comments-wrapper
+  .valine-wrapper
+    #valine.v
+      .vwrap
+        border-radius: 0
+        border-bottom: 1px solid #ddd
+        .vcontrol
+          .vsubmit
+            background: #fff
+      .vinfo
+        padding-left: .6rem
+      .vlist
+        padding: 0 .6rem
+        border-radius: .2rem
+        .vcard
+          .vimg
+            border-radius: .6rem
+            box-shadow: 0 1px 6px 0 rgba(0,0,0,0.2)
+            border: none
+        .vh
+          .vhead
+            .vsys
+              box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2)
+          .vmeta
+            .vat
+              background: #f2f2f2
+              box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2)
+              border-radius: .2rem
+              padding: 0 .4rem
+              color: #313131
+              border: 1px solid #ededed
+          .vcontent
+            background: #f2f2f2
+            box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2)
+            border-radius: .2rem
+            margin-right: 3.6rem
+            padding-top: .1rem
+            padding-left: .6rem
+            padding-right: .6rem
+            padding-bottom: 0.05rem
+            p .at
+              color: #1abc9c
+      .info
+        padding-right: .6rem
+
