style: ununify styles
 Include box-shadow/text-shadow/border-radius.

--- a/styles/colorMixin.styl
+++ b/styles/colorMixin.styl
@@ -14,7 +14,7 @@ color-mode(accountColor , colorName)
       &:focus
         border-color: accountColor!important;
     .navbar
-      box-shadow: 0 1px 6px 0 rgba(32,33,36,.28)
+      box-shadow: $boxShadow
       .nav-links a:hover,
       .nav-links a.router-link-active,
       .nav-links a:hover .iconfont,
