--- a/styles/recoConfig.styl
+++ b/styles/recoConfig.styl
@@ -1,6 +1,10 @@
 // colors
 $accentColor = #424242
 $textColor = #232321
+$boxShadow = 0 1px 6px 0 rgba(0, 0, 0, 0.2)
+$boxShadowHover = 0 2px 16px 0 rgba(0, 0, 0, 0.2)
+$textShadow = 0 2px 4px rgba(0, 0, 0, 0.2);
+$borderRadius = .25rem
 
 $themePicker = {
   red: #f26d6d,
