refactor: simplify timeline user configuration
feat: add @vuepress/plugin-medium-zoom

style: change back-to-top style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -291,5 +291,13 @@ th, td
     .jump, .jumpinp input
       box-shadow: $boxShadow
 
+/************** 搜索框 **************/
+
 .search-box input
   border-radius: $borderRadius
+
+/************** 回到顶部 **************/
+
+.back-to-ceiling
+  box-shadow: 0 9px 17px 0 rgba(0,0,0,0.2)!important
+  background-color: transparent!important
