fix: valine style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -265,6 +265,7 @@ th, td
               box-shadow: $boxShadow
           .vmeta
             .vat
+              margin-right: .2rem
               background: #f2f2f2
               box-shadow: $boxShadow
               border-radius: $borderRadius
