fix: valine style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -276,6 +276,7 @@ th, td
             background: #f2f2f2
             box-shadow: $boxShadow
             border-radius: $borderRadius
+            margin-left: .4rem
             margin-right: 3.6rem
             padding-top: .1rem
             padding-left: .6rem
