fix: change the show-ban-niang btn's color

--- a/styles/colorMixin.styl
+++ b/styles/colorMixin.styl
@@ -84,7 +84,7 @@ color-mode(accountColor , colorName)
           border 1px solid accountColor!important
           color accountColor!important;
     .showBanNiang
-      background-color lighten(accountColor, 50%)!important
+      color accountColor!important
     .banniang-container
       .messageBox
         background-color lighten(accountColor, 50%)!important
