style: fix style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -244,8 +244,8 @@ th, td
   .valine-wrapper
     #valine.v
       .vwrap
-        background: #f2f2f2
-        box-shadow: $boxShadow
+        background: #f0f2f4
+        // box-shadow: $boxShadow
         .vcontrol
           .vsubmit
             background: #fff
@@ -264,24 +264,21 @@ th, td
             .vsys
               box-shadow: $boxShadow
           .vmeta
+            margin-bottom: 1rem
             .vat
-              margin-right: .2rem
-              background: #f2f2f2
+              margin-right: .3rem
+              background: #f0f2f4
               box-shadow: $boxShadow
               border-radius: $borderRadius
               padding: 0 .4rem
               color: #313131
               border: 1px solid #ededed
           .vcontent
-            background: #f2f2f2
+            background: #f0f2f4
             box-shadow: $boxShadow
             border-radius: $borderRadius
-            margin-left: .4rem
-            margin-right: 3.6rem
-            padding-top: .1rem
-            padding-left: .6rem
-            padding-right: .6rem
-            padding-bottom: 0.05rem
+            margin: 0 .3rem
+            padding: .1rem .6rem .05rem .6rem
             p .at
               color: #1abc9c
       .info
@@ -297,9 +294,3 @@ th, td
 
 .search-box input
   border-radius: $borderRadius
-
-/************** 回到顶部 **************/
-
-.back-to-ceiling
-  box-shadow: 0 9px 17px 0 rgba(0,0,0,0.2)!important
-  background-color: transparent!important
