style: fix valine style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -255,6 +255,8 @@ th, td
         padding: 0 .6rem
         border-radius: $borderRadius
         .vcard
+          .vquote
+            margin-left: 0
           .vimg
             border-radius: $borderRadius
             box-shadow: $boxShadow
