--- a/styles/recoConfig.styl
+++ b/styles/recoConfig.styl
@@ -2,6 +2,7 @@ $boxShadow = 0 1px 6px 0 rgba(0, 0, 0, 0.2)
 $boxShadowHover = 0 2px 16px 0 rgba(0, 0, 0, 0.2)
 $textShadow = 0 2px 4px rgba(0, 0, 0, 0.1);
 $borderRadius = .25rem
+$backgroundColor = #fff
 
 $themePicker = {
   red: #f26d6d,
