--- a/styles/colorMixin.styl
+++ b/styles/colorMixin.styl
@@ -14,7 +14,7 @@ color-mode(accountColor , colorName)
       &:focus
         border-color: accountColor!important;
     .navbar
-      box-shadow: $boxShadow
+      box-shadow: var(--box-shadow)
       .nav-links a:hover,
       .nav-links a.router-link-active,
       .nav-links a:hover .iconfont,
