feat: add dark mode(part.2)

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -43,7 +43,7 @@ body
 
 .sidebar
   font-size 16px
-  background-color #fff
+  background-color var(--background-color)
   width $sidebarWidth
   position fixed
   z-index 10
