--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -1,64 +1,17 @@
-$contentClass = '.theme-default-content'
+$textShadow = 0 2px 4px rgba(0, 0, 0, 0.1);
+$borderRadius = .25rem
+$textColorSub = #888
 
-$accentColors ?= #3eaf7c
-$accentDarkColor ?= $accentColor
+$backgroundColor ?= #fff
+$backgroundColorDark ?= #25272a
+
+$boxShadow = 0 1px 6px 0 rgba(0, 0, 0, 0.2)
+$boxShadowHover = 0 2px 16px 0 rgba(0, 0, 0, 0.2)
+$boxShadowDark = 0 1px 6px 0 rgba(0, 0, 0, .9)
+$boxShadowHoverDark = 0 2px 26px 0 rgba(0, 0, 0, .9)
 
 $textColor ?= #2c3e50
-$textDarkColor ?= #e2e2e2
+$textColorDark ?= #aaa
 
 $borderColor ?= #eaecef
-$borderDarkColor ?= #4e4e4e
-
-$codeBgColor ?= #282c34
-$codeBgLightColor ?= #f8f8f8
-
-$preTextColor ?= #fff
-$preTextLightColor ?= #525252
-
-$highlightedBgColor ?= rgba(0, 0, 0, .66)
-$highlightedBgLightColor ?= rgba(224, 224, 224, 0.5)
-
-$languageTextColor ?= rgba(255, 255, 255, 0.4)
-$languageTextLightColor ?= rgba(0, 0, 0, 0.4)
-
-$lineNumbersColor ?= rgba(255, 255, 255, 0.3)
-$lineNumbersLightColor ?= rgba(0, 0, 0, 0.3)
-
-$miniCodeBgColor ?= rgba(27,31,35,0.05)
-$miniCodeBgDarkColor ?= rgba(255,255,255,0.1)
-
-$bgColor ?= #fff
-$bgDarkColor ?= #25272a
-
-$kbdBgColor ?= #eee
-$kbdBgDarkColor ?= #444
-
-$blockquoteTextColor ?= #999
-$blockquoteTextDarkColor ?= #eee
-
-$blockquoteBorderColor ?= #dfe2e5
-$blockquoteBorderDarkColor ?= #666b6f
-
-$tableBorderColor ?= #dfe2e5
-$tableBorderDarkColor ?= $borderDarkColor
-
-$tableStripeBgColor ?= #f6f8fa
-$tableStripeBgDarkColor ?= #444
-
-$tipBgColor ?= #f3f5f7
-$tipBgDarkColor ?= #3e3b3b
-
-$warningColor ?= #e7c000
-$warningDarkColor ?= #e7c000
-
-$warningBgColor ?= rgba(255, 229, 100, 0.3)
-$warningBgDarkColor ?= rgba(185, 174, 119, 0.3)
-
-$dangerColor ?= #c00
-$dangerDarkColor ?= #c00
-
-$dangerBgColor ?= #ffe6e6
-$dangerBgDarkColor ?= rgba(255, 214, 214, 0.3)
-
-$searchBorderColor ?= #999
-$searchBorderDarkColor ?= #eee
+$borderColorDark ?= rgba(0, 0, 0, .9)
