feat: add the --bgm-bg-color to adapt to dark mode

--- a/styles/mode.styl
+++ b/styles/mode.styl
@@ -4,9 +4,11 @@
   --box-shadow-hover $boxShadowHover
   --text-color $textColor
   --border-color $borderColor
+  --bgm-bg-color $bgmBgColor
   @media (prefers-color-scheme: dark)
     --background-color $backgroundColorDark
     --box-shadow $boxShadowDark
     --box-shadow-hover $boxShadowHoverDark
     --text-color $textColorDark
     --border-color $borderColorDark
+    --bgm-bg-color $bgmBgColorDark
