--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -15,3 +15,6 @@ $textColorDark ?= #aaa
 
 $borderColor ?= #eaecef
 $borderColorDark ?= rgba(0, 0, 0, .9)
+
+$bgmBgColor ?= rgba(255, 255, 255, .7)
+$bgmBgColorDark ?= rgba(0, 0, 0, .7)
