feat: add dark mode(part.5)

--- a/styles/mode.styl
+++ b/styles/mode.styl
@@ -5,6 +5,7 @@
   --text-color $textColor
   --border-color $borderColor
   --bgm-bg-color $bgmBgColor
+  --code-color $codeColor
   @media (prefers-color-scheme: dark)
     --background-color $backgroundColorDark
     --box-shadow $boxShadowDark
@@ -12,3 +13,4 @@
     --text-color $textColorDark
     --border-color $borderColorDark
     --bgm-bg-color $bgmBgColorDark
+    --code-color $codeColorDark
