--- a/styles/code.styl
+++ b/styles/code.styl
@@ -4,7 +4,7 @@
     padding 0.25rem 0.5rem
     margin 0
     font-size 0.85em
-    background-color rgba(27,31,35,0.05)
+    background-color var(--code-color)
     border-radius 3px
     .token
       &.deleted
