--- a/styles/custom-blocks.styl
+++ b/styles/custom-blocks.styl
@@ -8,17 +8,17 @@
     border-left-style solid
     margin 1rem 0
   &.tip
-    background-color var(--border-color)
+    background-color var(--code-color)
     border-color #67cc86
     .custom-block-title
       color #67cc86
   &.warning
-    background-color var(--border-color)
+    background-color var(--code-color)
     border-color #fb9b5f
     .custom-block-title
       color #fb9b5f
   &.danger
-    background-color var(--border-color)
+    background-color var(--code-color)
     border-color #f26d6d
     .custom-block-title
       color #f26d6d
