--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -16,5 +16,8 @@ $textColorDark ?= #aaa
 $borderColor ?= #eaecef
 $borderColorDark ?= rgba(0, 0, 0, .3)
 
+$codeColor ?= rgba(27, 31, 35, 0.05)
+$codeColorDark ?= rgba(0, 0, 0, .3)
+
 $bgmBgColor ?= rgba(255, 255, 255, .7)
 $bgmBgColorDark ?= rgba(0, 0, 0, .7)
