feat: add dark mode(part.6)

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -158,12 +158,12 @@ table
   overflow-x: auto
 
 tr
-  border-top 1px solid #dfe2e5
+  border-top 1px solid var(--border-color)
   &:nth-child(2n)
-    background-color #f6f8fa
+    background-color var(--code-color)
 
 th, td
-  border 1px solid #dfe2e5
+  border 1px solid var(--border-color)
   padding .6em 1em
 
 .theme-container
