--- a/styles/mobile.styl
+++ b/styles/mobile.styl
@@ -7,10 +7,8 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
   .sidebar
     font-size 15px
     width $mobileSidebarWidth
-  .page
-    padding-left $mobileSidebarWidth
-  .password-shadow
-    padding-left $mobileSidebarWidth  
+  .page, .password-wrapper-in
+    margin-left $mobileSidebarWidth
 
 // wide mobile
 @media (max-width: $MQMobile)
@@ -19,8 +17,8 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     padding-top $navbarHeight
     transform translateX(-100%)
     transition transform .2s ease
-  .page
-    padding-left 0
+  .page, .password-wrapper-in
+    margin-left 0
   .theme-container
     &.sidebar-open
       .sidebar
@@ -29,7 +27,7 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
       .sidebar
         padding-top: 0
   .password-shadow
-    padding-left 0      
+    padding-left 0
 
 // narrow mobile
 @media (max-width: $MQMobileNarrow)
