fix: Optimize HomeBlog.vue

--- a/styles/mode.styl
+++ b/styles/mode.styl
@@ -6,6 +6,7 @@
   --border-color $borderColor
   --bgm-bg-color $bgmBgColor
   --code-color $codeColor
+  --mask-color $maskColor
   @media (prefers-color-scheme: dark)
     --background-color $backgroundColorDark
     --box-shadow $boxShadowDark
@@ -14,3 +15,4 @@
     --border-color $borderColorDark
     --bgm-bg-color $bgmBgColorDark
     --code-color $codeColorDark
+    --mask-color $maskColorDark
