--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -21,3 +21,6 @@ $codeColorDark ?= rgba(0, 0, 0, .3)
 
 $bgmBgColor ?= rgba(255, 255, 255, .7)
 $bgmBgColorDark ?= rgba(0, 0, 0, .7)
+
+$maskColor ?= #888
+$maskColorDark ?= #000
