fix: some little problem

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -93,7 +93,7 @@ blockquote
   font-size .9rem
   color #999
   border-left .25rem solid #999
-  background-color var(--border-color)
+  background-color var(--code-color)
   margin 0.5rem 0
   padding .25rem 0 .25rem 1rem
   & > p
