--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -1,5 +1,6 @@
 $textShadow = 0 2px 4px rgba(0, 0, 0, 0.1);
 $borderRadius = .25rem
+$lineNumbersWrapperWidth = 2.5rem
 $textColorSub = #888
 
 $backgroundColor ?= #fff
