fix: fix update popup style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -216,10 +216,11 @@ th, td
 /************** SW-Update Popup **************/
 
 .sw-update-popup
-  border-radius: $borderRadius;
-  box-shadow: var(--box-shadow);
-  color: var(--text-color);
-  background: var(--background-color);
+  border-radius: $borderRadius!important;
+  box-shadow: var(--box-shadow)!important;
+  color: var(--text-color)!important;
+  background: var(--background-color)!important;
+  border: none!important;
   > button
     background: $accentColor;
     border-radius: $borderRadius;
