refactor: scrollerbar style

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -192,22 +192,19 @@ th, td
 
 /************** 滚动条 **************/
 ::-webkit-scrollbar
-  width: 6px;
+  width: 5px;
   height: 5px;
 
 ::-webkit-scrollbar-track-piece
-  background-color: rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
+  // background-color: rgba(0, 0, 0, 0.2);
 
 ::-webkit-scrollbar-thumb:vertical
   height: 5px;
-  background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;
+  background-color: $accentColor;
 
 ::-webkit-scrollbar-thumb:horizontal
   width: 5px;
-  background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;
+  background-color: $accentColor;
 
 /************** 流程图的滚动条 **************/
 .vuepress-flowchart
