fix: dark mode style

--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -26,7 +26,7 @@ $lineNumbersWrapperWidth = 2.5rem
 $textColorSub = #888
 
 $backgroundColor ?= #fff
-$backgroundColorDark ?= #25272a
+$backgroundColorDark ?= #202124
 
 $boxShadow = 0 1px 6px 0 $darkColor2
 $boxShadowHover = 0 2px 16px 0 $darkColor2
@@ -34,7 +34,7 @@ $boxShadowDark = 0 1px 6px 0 $darkColor6
 $boxShadowHoverDark = 0 2px 16px 0 $darkColor6
 
 $textColor ?= #2c3e50
-$textColorDark ?= #aaa
+$textColorDark ?= #fff
 
 $borderColor ?= #eaecef
 $borderColorDark ?= $darkColor3
