--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -23,18 +23,19 @@ $lightColor1 = rgba(255, 255, 255, .1)
 $textShadow = 0 2px 4px $darkColor1;
 $borderRadius = .25rem
 $lineNumbersWrapperWidth = 2.5rem
-$textColorSub = #888
 
-$backgroundColor ?= #fff
-$backgroundColorDark ?= #202124
+$backgroundColor ?= #F5F5F5
+$backgroundColorDark ?= #181818
 
 $boxShadow = 0 1px 6px 0 $darkColor2
 $boxShadowHover = 0 2px 16px 0 $darkColor2
 $boxShadowDark = 0 1px 6px 0 $darkColor6
 $boxShadowHoverDark = 0 2px 16px 0 $darkColor6
 
-$textColor ?= #2c3e50
-$textColorDark ?= #fff
+$textColor ?= #242424
+$textColorDark ?= #E8E8E8
+$textColorSub = #7F7F7F
+$textColorSubDark = #8B8B8B
 
 $borderColor ?= #eaecef
 $borderColorDark ?= $darkColor3
