--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -24,7 +24,7 @@ $textShadow = 0 2px 4px $darkColor1;
 $borderRadius = .25rem
 $lineNumbersWrapperWidth = 2.5rem
 
-$backgroundColor ?= #F5F5F5
+$backgroundColor ?= #fff
 $backgroundColorDark ?= #181818
 
 $boxShadow = 0 1px 6px 0 $darkColor2
