fix: text color

--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -33,7 +33,7 @@ $boxShadowDark = 0 1px 6px 0 $darkColor6
 $boxShadowHoverDark = 0 2px 16px 0 $darkColor6
 
 $textColor ?= #242424
-$textColorDark ?= #E8E8E8
+$textColorDark ?= $lightColor8
 $textColorSub = #7F7F7F
 $textColorSubDark = #8B8B8B
 
