style(vuepress-theme-reco): optimize

--- a/packages/vuepress-theme-reco/styles/theme.styl
+++ b/packages/vuepress-theme-reco/styles/theme.styl
@@ -4,7 +4,7 @@
 @require './arrow'
 @require './wrapper'
 @require './toc'
-@require './iconfont.css'
+// @require './iconfont.css'
 
 html, body
   padding 0
@@ -149,7 +149,7 @@ code, kbd, .line-number
   font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
 
 p, ul, ol
-  line-height 1.7
+  line-height 2.2
 
 hr
   border 0
