--- a/packages/vuepress-theme-reco/styles/theme.styl
+++ b/packages/vuepress-theme-reco/styles/theme.styl
@@ -56,8 +56,6 @@ body
 
 .content__default:not(.custom)
   @extend $wrapper
-  // > *:first-child
-  //   margin-top 1.6rem
   a:hover
     text-decoration underline
   p.demo
@@ -113,24 +111,16 @@ h1, h2, h3, h4, h5, h6
   font-weight 500
   line-height 1.25
   .content__default:not(.custom) > &
-    margin-top (0.5rem - $navbarHeight)
-    padding-top ($navbarHeight + 1rem)
-    margin-bottom 0
-    &:first-child
-      margin-top -3.5rem
-      margin-bottom 1rem
-      + p, + pre, + .custom-block
-        margin-top 2rem
-  &:hover .header-anchor
-    opacity: 1
+    margin-top 1.2rem
+    margin-bottom 1rem
 
 h1
   font-size 1.6rem
 
 h2
+  padding-left 0.8rem
   font-size 1.4rem
-  padding-bottom .3rem
-  border-bottom 1px solid var(--border-color)
+  border-left 5px solid $accentColor
 
 h3
   font-size 1.2rem
