feat(vuepress-theme-reco): use subSidebar to control the sub sidebar

--- a/packages/vuepress-theme-reco/styles/theme.styl
+++ b/packages/vuepress-theme-reco/styles/theme.styl
@@ -195,7 +195,7 @@ th, td
 @require 'mobile.styl'
 
 .iconfont
-  font-size: 0.9rem;
+  font-size: 12px;
   color: var(--text-color-sub);
 
 /************** 滚动条 **************/
