--- a/packages/vuepress-theme-reco/styles/theme.styl
+++ b/packages/vuepress-theme-reco/styles/theme.styl
@@ -113,8 +113,8 @@ h1, h2, h3, h4, h5, h6
   font-weight 500
   line-height 1.25
   .content__default:not(.custom) > &
-    margin-top (2.1rem - $navbarHeight)
-    padding-top $navbarHeight
+    margin-top 0
+    padding-top 2.1rem
     margin-bottom 0
     &:first-child
       margin-top -3.5rem
