chore(vuepress-theme-reco): compatible with sidebar parameters
1. You can control the sidebar by sidebar: 'auto'
2. some minor optimizations

--- a/packages/vuepress-theme-reco/styles/theme.styl
+++ b/packages/vuepress-theme-reco/styles/theme.styl
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6
   .content__default:not(.custom) > &
     margin-top (2.1rem - $navbarHeight)
     padding-top $navbarHeight
-    margin-bottom 0
+    margin-bottom 1rem
     &:first-child
       margin-top -3.5rem
 
@@ -197,7 +197,8 @@ th, td
 @require 'mobile.styl'
 
 .iconfont
-  font-size: 12px;
+  font-family: "iconfont",Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif !important
+  font-size: 13px;
   color: var(--text-color-sub);
 
 /************** 滚动条 **************/
